--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # API
+  http: ^0.12.2
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  # Local database
+  path: ^1.7.0
+  sqflite: ^1.3.1+1
+  
+  # State Management
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
