--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # Local database
   path: ^1.7.0
   sqflite: ^1.3.1+1
+  shared_preferences: ^0.5.12
   
   # State Management
   provider: ^4.3.2+2
