--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # State Management
   provider: ^4.3.2+2
 
+  # Sharing
+  esys_flutter_share: ^1.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
