--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="jera_challenge"
+        android:label="Jera Challenge"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
